--- a/VAR.Toolbox/VAR.Toolbox.csproj
+++ b/VAR.Toolbox/VAR.Toolbox.csproj
@@ -52,6 +52,12 @@
     <Compile Include="FrmBase64.Designer.cs">
       <DependentUpon>FrmBase64.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmProxyCmd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmProxyCmd.Designer.cs">
+      <DependentUpon>FrmProxyCmd.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmToolbox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,14 +66,29 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FrmBase64.resx">
       <DependentUpon>FrmBase64.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmProxyCmd.resx">
+      <DependentUpon>FrmProxyCmd.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmToolbox.resx">
       <DependentUpon>FrmToolbox.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
