--- a/VAR.Toolbox/VAR.Toolbox.csproj
+++ b/VAR.Toolbox/VAR.Toolbox.csproj
@@ -106,6 +106,12 @@
     <Compile Include="UI\FrmProxyCmd.Designer.cs">
       <DependentUpon>FrmProxyCmd.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\FrmTestRestService.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FrmTestRestService.Designer.cs">
+      <DependentUpon>FrmTestRestService.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\FrmTestSoapService.cs">
       <SubType>Form</SubType>
     </Compile>
