--- a/VAR.Toolbox/VAR.Toolbox.csproj
+++ b/VAR.Toolbox/VAR.Toolbox.csproj
@@ -83,8 +83,10 @@
     <Compile Include="Code\DirectShow\Tools.cs" />
     <Compile Include="Code\DirectShow\Uuids.cs" />
     <Compile Include="Code\DirectShow\Win32.cs" />
+    <Compile Include="Code\GDI32.cs" />
     <Compile Include="Code\Logger.cs" />
     <Compile Include="Code\Mouse.cs" />
+    <Compile Include="Code\Screenshooter.cs" />
     <Compile Include="Code\User32.cs" />
     <Compile Include="Code\Webcam.cs" />
     <Compile Include="Code\Win32API.cs" />
@@ -105,6 +107,12 @@
     </Compile>
     <Compile Include="UI\FrmProxyCmd.Designer.cs">
       <DependentUpon>FrmProxyCmd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\FrmScreenshooter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FrmScreenshooter.Designer.cs">
+      <DependentUpon>FrmScreenshooter.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\FrmTestRestService.cs">
       <SubType>Form</SubType>
