--- a/VAR.Toolbox/VAR.Toolbox.csproj
+++ b/VAR.Toolbox/VAR.Toolbox.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Code\CoderBase64.cs" />
     <Compile Include="Code\DirectShow\CameraControlProperty.cs" />
     <Compile Include="Code\DirectShow\IAMCameraControl.cs" />
     <Compile Include="Code\DirectShow\IAMCrossbar.cs" />
@@ -84,6 +85,7 @@
     <Compile Include="Code\DirectShow\Uuids.cs" />
     <Compile Include="Code\DirectShow\Win32.cs" />
     <Compile Include="Code\GDI32.cs" />
+    <Compile Include="Code\ICoder.cs" />
     <Compile Include="Code\IOutputHandler.cs" />
     <Compile Include="Code\IProxyCmdExecutor.cs" />
     <Compile Include="Code\Logger.cs" />
@@ -98,11 +100,11 @@
     <Compile Include="Controls\CtrImageViewer.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="UI\FrmBase64.cs">
+    <Compile Include="UI\FrmCoder.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\FrmBase64.Designer.cs">
-      <DependentUpon>FrmBase64.cs</DependentUpon>
+    <Compile Include="UI\FrmCoder.Designer.cs">
+      <DependentUpon>FrmCoder.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\FrmCover.cs">
       <SubType>Form</SubType>
