--- a/VAR.ScreenAutomation/VAR.ScreenAutomation.csproj
+++ b/VAR.ScreenAutomation/VAR.ScreenAutomation.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bots\DummyBot.cs" />
+    <Compile Include="Code\AutomationBotFactory.cs" />
     <Compile Include="Code\Mouse.cs" />
     <Compile Include="Code\Screenshoter.cs" />
     <Compile Include="Code\WindowHandling.cs" />
