Save configuration between executions.

--- a/VAR.ScreenAutomation/VAR.ScreenAutomation.csproj
+++ b/VAR.ScreenAutomation/VAR.ScreenAutomation.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Bots\DummyBot.cs" />
     <Compile Include="Bots\TetrisBot.cs" />
     <Compile Include="Code\AutomationBotFactory.cs" />
+    <Compile Include="Code\Configuration.cs" />
     <Compile Include="Code\Mouse.cs" />
     <Compile Include="Code\Screenshoter.cs" />
     <Compile Include="Code\WindowHandling.cs" />
