--- a/VAR.Toolbox/VAR.Toolbox.csproj
+++ b/VAR.Toolbox/VAR.Toolbox.csproj
@@ -195,6 +195,12 @@
       <DependentUpon>FrmWebcam.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\IToolForm.cs" />
+    <Compile Include="UI\Tools\FrmWorkLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Tools\FrmWorkLog.Designer.cs">
+      <DependentUpon>FrmWorkLog.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Tools\PnlActivity.cs">
       <SubType>UserControl</SubType>
     </Compile>
