BaseFactory: Generic base factory.

--- a/VAR.Toolbox/VAR.Toolbox.csproj
+++ b/VAR.Toolbox/VAR.Toolbox.csproj
@@ -73,6 +73,7 @@
     <Compile Include="..\VAR.Json\VAR.Json\ParserContext.cs">
       <Link>Code\Json\ParserContext.cs</Link>
     </Compile>
+    <Compile Include="Code\BaseFactory.cs" />
     <Compile Include="Code\EventDispatcher.cs" />
     <Compile Include="Code\HexUtils.cs" />
     <Compile Include="Code\IEventListener.cs" />
