--- a/VAR.Toolbox/VAR.Toolbox.csproj
+++ b/VAR.Toolbox/VAR.Toolbox.csproj
@@ -132,6 +132,12 @@
     <Compile Include="Controls\CtrOutput.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="UI\FrmDialogString.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FrmDialogString.Designer.cs">
+      <DependentUpon>FrmDialogString.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\IToolPanel.cs" />
     <Compile Include="UI\Tools\FrmCoder.cs">
       <SubType>Form</SubType>
